<resources>
    <string name="loading">Loading…</string>
    <string name="logining">Login now…</string>
    <string name="login_str_username_notnull">Please input username.</string>
    <string name="login_str_loginpass1_notnull">Please input password.</string>
    <string name="login_str_loginpass2_notnull">Please input password confirmation.</string>
    <string name="login_str_loginephone_tips">Error Mobile phone No.</string>
    <string name="login_str_loginemail_tips">The format of E-mail is wrong</string>
    <string name="login_str_loginemail_notnull">Please input E-mail address.</string>
    <string name="login_str_loginpass_notsame">Password is inconsistent.</string>
    <string name="login_str_password_same">New password can\'t be the same with the old one, please input again.</string>
    <string name="login_str_username_tips">Format for the username is not correct, and it can only be email address.</string>
    <string name="login_str_username_tips2">Username can\'t be all numbers.</string>
    <string name="login_str_username_tips3">User name should be composed of letter, number and -_</string>
    <string name="login_str_username_tips4">Username should be 4–28 characters.</string>
    <string name="login_str_password_tips1">Password should be 6–20 characters.</string>
    <string name="login_str_login_failed">Login failed</string>
    <string name="login_str_regist_success">Registed successfully</string>
    <string name="login_str_registerchoiceone">Phone register</string>
    <string name="login_str_registerchoicetwo">E-mail register</string>
    <string name="login_str_regist_failed">Registed failed</string>
    <string name="login_str_registing">Registing</string>
    <string name="str_have_registed">This user name has been registered</string>
    <string name="login_str_device">Device List</string>
    <string name="login_str_add_device">Add Device</string>
    <string name="login_str_device_devicename_notnull">Please input nickname for the device</string>
    <string name="login_str_nike_name_order">The NikeName should be English letter,number,or special characters like .-_+()</string>
    <string name="login_str_device_account_notnull">Please input username.</string>
    <string name="login_str_device_pass_notnull">Please input password.</string>
    <string name="device_pass_notzh">Password can not be Chinese</string>
    <string name="login_str_device_connnum_notnull">number of channels can not be empty</string>
    <string name="login_str_device_account_error">Username format incorrect, it can only be formed by 1–15 letters,numbers or. _-.</string>
    <string name="login_str_device_pass_error">Password format incorrect, it can only be formed by 0–15 letters,numbers or _-.</string>
    <string name="login_str_device_add_success">Device added successfully</string>
    <string name="login_str_device_add_failed">Failed to add device</string>
    <string name="login_str_point_delete_success">Channel deleted successfully</string>
    <string name="login_str_point_delete_failed">Channel deleted failed</string>
    <string name="login_str_point_add_failed">Channel added failed</string>
    <string name="login_str_point_edit_success">Channel modified successfully</string>
    <string name="login_str_point_edit_failed">Channel modified failed</string>
    <string name="login_str_device_delete_success">Device deleted successfully</string>
    <string name="login_str_device_delete_failed">Device deleted failed</string>
    <string name="login_str_device_edit_success">Device modified successfully</string>
    <string name="login_str_device_edit_failed">Device modified failed</string>
    <string name="login_str_point_id">channel ID</string>
    <string name="login_str_point_name">channel name</string>
    <string name="login_str_save">Save</string>
    <string name="login_str_advance">Setting</string>
    <string name="login_str_close">Close</string>
    <string name="login_str_device_num">Device number</string>
    <string name="login_str_account">Username</string>
    <string name="login_str_pass">Password</string>
    <string name="login_str_edit">Edit</string>
    <string name="login_str_delete">Delete</string>
    <string name="login_str_user_name_2">Username</string>
    <string name="login_str_user_pass">Password</string>
    <string name="login_str_user_email">Email</string>
    <string name="login_str_user_login">Login</string>
    <string name="login_str_user_regist">Register</string>
    <string name="login_str_back">Back</string>
    <string name="login_str_add">Add</string>
    <string name="more_nologin">Operate after login.</string>
    <string name="last_time">Previous login time:</string>
    <string name="more_modify">Modify</string>
    <string name="more_modifypwd">Change Password</string>
    <string name="more_findpassword">Retrieve Password</string>
    <string name="more_cancel">Quit</string>
    <string name="cloud1">CloudSEE</string>
    <string name="cloud2">Vision to world</string>
    <string name="nicknamechose">Choose to fill in</string>
    <string name="rebindcontact">Modify the binding</string>
    <string name="rebindcontactphone">Modify the phone</string>
    <string name="rebindcontactemail">Modify the E-mail</string>
    <string name="rebindcontactnickname">Modify your nick-name</string>
    <string name="rebindhasnot">Unbounded</string>
    <string name="rebindnicknamenull">Did not fill in</string>
    <string name="rebindemailhassend">E-mail has been send</string>
    <string name="rebindemailhassendfailed">E-mail error</string>
    <string name="rebindsussess">Binding  success</string>
    <string name="rebindfailed">Binding  failed</string>
    <string name="rebindnickname">NickName</string>
    <string name="location_login">Visitor</string>
    <string name="devicecount">Total of&#160;0&#160;Device</string>
    <string name="nikename">NickName</string>
    <string name="nikename2">NickName</string>
    <string name="str_deleting">Operating…</string>
    <string name="str_point_nikename_exist">This nickname existed already, please choose another.</string>
    <string name="str_nikename_notnull">Please input the nickname</string>
    <string name="my_device">My Device</string>
    <string name="video_edit">Video Edit</string>
    <string name="more_featrue">More</string>
    <string name="channal_list">Choose Channel</string>
    <string name="channalmanager">Channel Management</string>
    <string name="video_list">Video List</string>
    <string name="video_manager">Video Management</string>
    <string name="message">System Message</string>
    <string name="str_screen"> channels</string>
    <string name="str_video_play">Video</string>
    <string name="str_audio_monitor">Device Manage</string>
    <string name="str_audio_monitor_forbidden">This function is unavailable during Two-way Talk.</string>
    <string name="str_yt_operate">PTZ</string>
    <string name="str_devicemanages">You are using Visit login and you can not use this function now.If you want to use this function, please switch to Account login mode.</string>
    <string name="str_remote_playback">Playback</string>
    <string name="str_remote_alarm">Alarm video</string>
    <string name="str_audio_monitor_tips">Learn audio info at any time</string>
    <string name="str_yt_operate_tips">Adjust PTZ at any time</string>
    <string name="str_remote_playback_tips">Check Playback info at any time</string>
    <string name="str_start_record">Start Recording</string>
    <string name="str_stop_record">Stop recording,video file kept in </string>
    <string name="str_wait_connect">This operation is only available when video connected</string>
    <string name="str_forbidden_operation">Unable to use this function during remote playback.</string>
    <string name="str_forbidden_alarm">Unable to use this function during alarm.</string>
    <string name="forbidden_operation_when_paused">Stop using this feature as video paused</string>
    <string name="str_not_support_remoteplay">This device is temporarily unable to operate during remote playback.</string>
    <string name="str_picture_savepath">Capture is kept in </string>
    <string name="str_capture">Capture</string>
    <string name="str_voice">Talk</string>
    <string name="str_video">Record</string>
    <string name="str_more">More</string>
    <string name="record_failed">The video is invalid</string>
    <string name="voice_send">Hold to talk</string>
    <string name="voice_stop">Release to Send</string>
    <string name="voice_tips_normal">Normal mode,turn to be tel mode by using earphone</string>
    <string name="voice_tips_ear">Tel Mode</string>
    <string name="voice_ear_tips">It will be better by earphone when you use audio.</string>
    <string name="str_has_call">Another client is using Talk function, please use this function later.</string>
    <string name="str_call_close">Disabled the Two-way talk function.</string>
    <string name="play_failed"> play the video failed</string>
    <string name="play_over">End of the video</string>
    <string name="str_share_link">Share the Link</string>
    <string name="str_share_link_tips"></string>
    <string name="str_share_link_demo">Share/Manage Video</string>
    <string name="playhelp_pull">change into multi-screen</string>
    <string name="playhelp_moreview">More→image view</string>
    <string name="playhelp_maliu">switch stream</string>
    <string name="playhelp_voice">audio switch</string>
    <string name="playhelp_fanzhuan">turn video</string>
    <string name="playhelp_devicesetting">Setup the device functions</string>
    <string name="playhelp_cloud">gesture PTZ</string>
    <string name="playhelp_zoom">gesture zoom</string>
    <string name="cloud_number">CloudSEE ID</string>
    <string name="str_more_features">More function</string>
    <string name="str_alarm">Alarm</string>
    <string name="str_alarm_info">Alarm Information</string>
    <string name="str_scenepic">Scene picture</string>
    <string name="str_video_mode">Browse model</string>
    <string name="str_video_modetwo">Viewing Mode(Single-device)</string>
    <string name="str_video_more_modetwo">Viewing Mode(Multi-device)</string>
    <string name="str_video_single_mode">Single</string>
    <string name="str_video_more_mode">Multi</string>
    <string name="str_checkupdate">Software Update</string>
    <string name="str_check_update_failed">Check updates failed</string>
    <string name="str_account">Account</string>
    <string name="str_help">Help</string>
    <string name="str_checkupdating">Checking for updates…</string>
    <string name="str_logining_out">Log Out…</string>
    <string name="str_already_newest">Already newest</string>
    <string name="str_about">About</string>
    <string name="str_feedback">Suggestion and FeedBack</string>
    <string name="str_login_out">Log Out</string>
    <string name="str_alarm_settings">Alarm Settings</string>
    <string name="str_alarm_pushon_failed">Failed to enable the alarm message delivery</string>
    <string name="str_alarm_pushoff_failed">Failed to disable the alarm message</string>
    <string name="str_alarmcry">婴儿啼哭报警</string>
    <string name="str_alarmcry1">门槛值</string>
    <string name="str_alarmcry2">高于门槛值的采样点个数/帧</string>
    <string name="str_alarmcry3">啼哭时长</string>
    <string name="str_high">高</string>
    <string name="str_low">低</string>
    <string name="str_enter_username">Phone/Email/Username</string>
    <string name="cancel">Cancel</string>
    <string name="str_format">Format</string>
    <string name="str_devicelist">Device List:</string>
    <string name="str_devicestatus">Device Status :</string>
    <string name="str_usedstatus">Service Condition :</string>
    <string name="str_recodemod">Record Mode :</string>
    <string name="str_moveset">Sensitivity</string>
    <string name="save">Save</string>
    <string name="person_setting_mtu">MTU Setting</string>
</resources>