<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/overturn"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/top_bar_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@color/white" >

        <TextView
            android:id="@+id/textone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/str_moveset"
            android:textSize="16sp" />

        <SeekBar
            android:id="@+id/moveseekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/nMDSensitivity"
            android:layout_toRightOf="@+id/textone"
            android:maxHeight="3dip"
            android:minHeight="3dip"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:progressDrawable="@drawable/seekspeed_drawable"
            android:thumb="@drawable/seekbar_move" />

        <TextView
            android:id="@+id/nMDSensitivity"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="0"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/move_save"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/blue_bg"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/move_cancle"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="25dp"
                android:layout_weight="1"
                android:background="@drawable/blue_bg"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>