<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/top_bar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp" >

            <TextView
                android:id="@+id/one"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_horizontal"
                android:text="@string/str_devicelist"
                android:textColor="@color/more_fragment_color2"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/save_TotalSize"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/one"
                android:background="@drawable/savemanage_normal_icon"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:text=""
                android:textColor="@color/more_fragment_color2"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/one"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_horizontal"
                android:text="@string/str_devicestatus"
                android:textColor="@color/more_fragment_color2"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/recode_status"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/one"
                android:background="@drawable/savemanage_normal_icon"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:text=""
                android:textColor="@color/more_fragment_color2"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/one"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_horizontal"
                android:text="@string/str_usedstatus"
                android:textColor="@color/more_fragment_color2"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/hasused_status"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/one"
                android:background="@drawable/savemanage_normal_icon"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:text=""
                android:textColor="@color/more_fragment_color2"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/one"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_horizontal"
                android:text="@string/str_recodemod"
                android:textColor="@color/more_fragment_color2"
                android:textSize="18sp" />

            <RelativeLayout
                android:id="@+id/recode_chose"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/one"
                android:background="@drawable/savemanage_normal_icon" >

                <TextView
                    android:id="@+id/save_nmode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="8dp"
                    android:text=""
                    android:textColor="@color/more_fragment_color2"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/savemanager_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/login_savepull_icon" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="40dp" >

            <TextView
                android:id="@+id/one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/str_devicelist"
                android:textColor="@color/more_fragment_color2"
                android:textSize="18sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/format"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/one"
                android:background="@drawable/blue_bg"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:text="@string/str_format"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp" >

        <TextView
            android:id="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/str_devicelist"
            android:textColor="@color/more_fragment_color2"
            android:textSize="18sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/savemanager_save"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/one"
            android:background="@drawable/blue_bg"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

</LinearLayout>