<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_alarm_dialog_bg"
        android:paddingBottom="12dp" >

        <TextView
            android:id="@+id/dialog_denglu_warming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/person_setting_mtu"
            android:textColor="@color/dialogchannaltext"
            android:textSize="20sp" />

        <View
            android:id="@+id/dialog_divider"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@+id/dialog_denglu_warming"
            android:layout_marginTop="15dp"
            android:background="@color/gainsboro" />

        <RadioGroup
            android:id="@+id/group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_divider"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/mtu_btn_one"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:button="@null"
                android:drawableRight="@drawable/radio_selector"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@integer/person_setting_mtu_radio_one"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="?android:attr/listDivider" />

            <RadioButton
                android:id="@+id/mtu_btn_two"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:button="@null"
                android:drawableRight="@drawable/radio_selector"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@integer/person_setting_mtu_radio_two"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="?android:attr/listDivider" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/group"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/dialog_completed"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/blue_bg"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/dialog_view"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/dialog_cancel"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:background="@drawable/blue_bg"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/dialog_view"
                android:textSize="16sp" />
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/dialog_cancle_img"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_gravity="right"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/close_icon" />

</FrameLayout>